syntax = "proto3";
package com.sixt.demoservice;
service Demoservice {
   rpc getHelloWorld(HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
   string name = 1;
}

message HelloWorldResponse {
    string message = 1;
}